<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:id="@+id/root"
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_height="match_parent"
 android:layout_width="match_parent"
 android:layout_marginLeft="20dip"  
 android:layout_marginRight="20dip"
 android:layout_marginTop="20dip"
 android:orientation="vertical">
 	 <TextView android:id="@+id/setting_change_password_note_old"
		 android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:textSize="18sp"
		 android:text="@string/password_old"/>
	 <EditText android:id="@+id/setting_change_password_old"
		 android:layout_height="wrap_content"
		 android:layout_width="fill_parent"
		 android:inputType="textPassword" />
	 <TextView android:id="@+id/setting_change_password_note_new1"
		 android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:layout_marginTop="20dip"
		 android:textSize="18sp"
		 android:text="@string/password_new1"/>
	 <EditText android:id="@+id/setting_change_password_new1"
		 android:layout_height="wrap_content"
		 android:layout_width="fill_parent"
		 android:inputType="textPassword" />
	 <TextView android:id="@+id/setting_change_password_note_new2"
		 android:layout_height="wrap_content"
		 android:layout_width="wrap_content"
		 android:layout_marginTop="20dip"
		 android:textSize="18sp"
		 android:text="@string/password_new2"/>
	 <EditText android:id="@+id/setting_change_password_new2"
		 android:layout_height="wrap_content"
		 android:layout_width="fill_parent"
		 android:inputType="textPassword" />
	 <Button android:id="@+id/setting_change_password_ok"
		 android:layout_height="wrap_content"
		 android:layout_width="fill_parent"
		 android:layout_marginTop="20dip"
		 android:gravity="center" 
		 android:textSize="20sp"
		 android:text="@string/password_ok"/>
</LinearLayout>